--- a/Housing_Prediction.ipynb
+++ b/Housing_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.sum of      price   area  bedrooms  bathrooms  stories  mainroad  guestroom  \\\n",
+       "0    False  False     False      False    False     False      False   \n",
+       "1    False  False     False      False    False     False      False   \n",
+       "2    False  False     False      False    False     False      False   \n",
+       "3    False  False     False      False    False     False      False   \n",
+       "4    False  False     False      False    False     False      False   \n",
+       "..     ...    ...       ...        ...      ...       ...        ...   \n",
+       "540  False  False     False      False    False     False      False   \n",
+       "541  False  False     False      False    False     False      False   \n",
+       "542  False  False     False      False    False     False      False   \n",
+       "543  False  False     False      False    False     False      False   \n",
+       "544  False  False     False      False    False     False      False   \n",
+       "\n",
+       "     basement  hotwaterheating  airconditioning  parking  prefarea  \\\n",
+       "0       False            False            False    False     False   \n",
+       "1       False            False            False    False     False   \n",
+       "2       False            False            False    False     False   \n",
+       "3       False            False            False    False     False   \n",
+       "4       False            False            False    False     False   \n",
+       "..        ...              ...              ...      ...       ...   \n",
+       "540     False            False            False    False     False   \n",
+       "541     False            False            False    False     False   \n",
+       "542     False            False            False    False     False   \n",
+       "543     False            False            False    False     False   \n",
+       "544     False            False            False    False     False   \n",
+       "\n",
+       "     furnishingstatus  \n",
+       "0               False  \n",
+       "1               False  \n",
+       "2               False  \n",
+       "3               False  \n",
+       "4               False  \n",
+       "..                ...  \n",
+       "540             False  \n",
+       "541             False  \n",
+       "542             False  \n",
+       "543             False  \n",
+       "544             False  \n",
+       "\n",
+       "[545 rows x 13 columns]>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for nulls\n",
+    "house_info.isnull().sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +400,7 @@
        "4              no             yes        2  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
