--- a/Housing_Prediction.ipynb
+++ b/Housing_Prediction.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import pandas as pd\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import seaborn as sns\n",
-    "# import numpy as np\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from xgboost import XGBRegressor\n",
-    "# from sklearn import metrics"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +62,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -203,14 +210,12 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Prepare Data\n",
-    "\n",
     "# Create pandas dataframe\n",
     "house_info = pd.DataFrame(data_import)\n",
     "house_info.head()"
@@ -218,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +271,7 @@
        "[545 rows x 13 columns]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +405,7 @@
        "4              no             yes        2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,6 +414,224 @@
     "# Drop unnecessary columns\n",
     "house_df = house_info.drop(columns=[\"guestroom\", \"prefarea\", \"furnishingstatus\"], axis=1)\n",
     "house_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Scarthicus\\AppData\\Local\\Temp\\ipykernel_12360\\2219152172.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  converted_house_df[[\"mainroad\", \"basement\", \"hotwaterheating\", \"airconditioning\"]] = converted_house_df[[\"mainroad\", \"basement\", \"hotwaterheating\", \"airconditioning\"]].replace({\"yes\": 1, \"no\": 0})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>area</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>stories</th>\n",
+       "      <th>mainroad</th>\n",
+       "      <th>basement</th>\n",
+       "      <th>hotwaterheating</th>\n",
+       "      <th>airconditioning</th>\n",
+       "      <th>parking</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13300000</td>\n",
+       "      <td>7420</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12250000</td>\n",
+       "      <td>8960</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12250000</td>\n",
+       "      <td>9960</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12215000</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11410000</td>\n",
+       "      <td>7420</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      price  area  bedrooms  bathrooms  stories  mainroad  basement  \\\n",
+       "0  13300000  7420         4          2        3         1         0   \n",
+       "1  12250000  8960         4          4        4         1         0   \n",
+       "2  12250000  9960         3          2        2         1         1   \n",
+       "3  12215000  7500         4          2        2         1         1   \n",
+       "4  11410000  7420         4          1        2         1         1   \n",
+       "\n",
+       "   hotwaterheating  airconditioning  parking  \n",
+       "0                0                1        2  \n",
+       "1                0                1        3  \n",
+       "2                0                0        2  \n",
+       "3                0                1        3  \n",
+       "4                0                1        2  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert Yes/No to 1/0 for scaling\n",
+    "converted_house_df = house_df.copy()\n",
+    "converted_house_df[[\"mainroad\", \"basement\", \"hotwaterheating\", \"airconditioning\"]] = converted_house_df[[\"mainroad\", \"basement\", \"hotwaterheating\", \"airconditioning\"]].replace({\"yes\": 1, \"no\": 0})\n",
+    "converted_house_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split X and Y\n",
+    "y = converted_house_df[\"price\"]\n",
+    "\n",
+    "x = converted_house_df.copy()\n",
+    "x = x.drop(columns=\"price\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "price\n",
+       "3500000     17\n",
+       "4200000     17\n",
+       "4900000     12\n",
+       "3150000      9\n",
+       "5600000      9\n",
+       "            ..\n",
+       "6580000      1\n",
+       "4319000      1\n",
+       "4375000      1\n",
+       "4382000      1\n",
+       "13300000     1\n",
+       "Name: count, Length: 219, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train Test Split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale numeric data\n",
+    "scaler = StandardScaler().fit(x_train)\n",
+    "scaled_x_train = scaler.transform(x_train)\n",
+    "scaled_x_test = scaler.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Model"
    ]
   },
   {
@@ -441,7 +664,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Visualization"
+   ]
   },
   {
    "cell_type": "code",
@@ -455,7 +680,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dev",
    "language": "python",
    "name": "python3"
   },
@@ -469,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
