created initial model

--- a/Housing_Prediction.ipynb
+++ b/Housing_Prediction.ipynb
@@ -575,38 +575,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "price\n",
-       "3500000     17\n",
-       "4200000     17\n",
-       "4900000     12\n",
-       "3150000      9\n",
-       "5600000      9\n",
-       "            ..\n",
-       "6580000      1\n",
-       "4319000      1\n",
-       "4375000      1\n",
-       "4382000      1\n",
-       "13300000     1\n",
-       "Name: count, Length: 219, dtype: int64"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
@@ -640,7 +608,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Model"
+    "# Initial Model - Linear Regression\n",
+    "linear_regression_model = LinearRegression()\n",
+    "\n",
+    "linear_regression_model.fit(x_train, y_train)\n",
+    "lr_model_predictions = linear_regression_model.predict(x_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.6101332275947464  Mean Square Error: 1252183947657.4966  Root Mean Square Error: 1119010.2535980162\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test model\n",
+    "lr_model_r2_score = metrics.r2_score(y_test, lr_model_predictions)\n",
+    "lr_model_rmse = metrics.root_mean_squared_error(y_test, lr_model_predictions)\n",
+    "lr_model_mse = lr_model_rmse ** 2\n",
+    "\n",
+    "print(f\"R2 score: {lr_model_r2_score}  Mean Square Error: {lr_model_mse}  Root Mean Square Error: {lr_model_rmse}\")"
    ]
   },
   {
@@ -649,7 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optimization 1"
+    "# Alternate model - Random Forrest"
    ]
   },
   {
