--- a/Housing_Prediction.ipynb
+++ b/Housing_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
        "[545 rows x 13 columns]>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +406,7 @@
        "4              no             yes        2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +549,7 @@
        "4                0                1        2  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,32 +605,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initial Model - Linear Regression\n",
     "linear_regression_model = LinearRegression()\n",
     "\n",
-    "linear_regression_model.fit(x_train, y_train)\n",
-    "lr_model_predictions = linear_regression_model.predict(x_test)\n"
+    "linear_regression_model.fit(scaled_x_train, y_train)\n",
+    "lr_model_predictions = linear_regression_model.predict(scaled_x_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.6101332275947464  Mean Square Error: 1252183947657.4966  Root Mean Square Error: 1119010.2535980162\n"
+      "R2 score: 0.6101332275947471  Mean Square Error: 1252183947657.4944  Root Mean Square Error: 1119010.2535980153\n"
      ]
     }
    ],
    "source": [
-    "# Test model\n",
+    "# Score model\n",
     "lr_model_r2_score = metrics.r2_score(y_test, lr_model_predictions)\n",
     "lr_model_rmse = metrics.root_mean_squared_error(y_test, lr_model_predictions)\n",
     "lr_model_mse = lr_model_rmse ** 2\n",
@@ -639,11 +640,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Alternate model - Random Forrest"
+    "# Alternate model - Random Forest\n",
+    "random_forest_model = RandomForestClassifier(n_estimators=1000, random_state=4)\n",
+    "\n",
+    "random_forest_model.fit(scaled_x_train, y_train)\n",
+    "rf_model_predictions = random_forest_model.predict(scaled_x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.021897810218978103\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Score model\n",
+    "rf_model_accuracy = metrics.accuracy_score(y_test, rf_model_predictions)\n",
+    "print(f\"Accuracy: {rf_model_accuracy}\")"
    ]
   },
   {
