--- a/Housing_Prediction.ipynb
+++ b/Housing_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "[545 rows x 13 columns]>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "4              no             yes        2  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "4                0                1        2  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -640,12 +640,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Alternate model - Random Forest\n",
-    "random_forest_model = RandomForestClassifier(n_estimators=1000, random_state=4)\n",
+    "random_forest_model = RandomForestRegressor(n_estimators=1000, random_state=4)\n",
     "\n",
     "random_forest_model.fit(scaled_x_train, y_train)\n",
     "rf_model_predictions = random_forest_model.predict(scaled_x_test)"
@@ -653,21 +653,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.021897810218978103\n"
+      "R2 score: 0.5253645263629891  Mean Square Error: 1524446203533.5771  Root Mean Square Error: 1234684.6575274097\n"
      ]
     }
    ],
    "source": [
     "# Score model\n",
-    "rf_model_accuracy = metrics.accuracy_score(y_test, rf_model_predictions)\n",
-    "print(f\"Accuracy: {rf_model_accuracy}\")"
+    "rf_model_r2_score = metrics.r2_score(y_test, rf_model_predictions)\n",
+    "rf_model_rmse = metrics.root_mean_squared_error(y_test, rf_model_predictions)\n",
+    "rf_model_mse = rf_model_rmse ** 2\n",
+    "\n",
+    "print(f\"R2 score: {rf_model_r2_score}  Mean Square Error: {rf_model_mse}  Root Mean Square Error: {rf_model_rmse}\")"
    ]
   },
   {
