--- a/Housing_Prediction.ipynb
+++ b/Housing_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from sklearn import metrics"
    ]
   },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -671,6 +671,41 @@
     "rf_model_mse = rf_model_rmse ** 2\n",
     "\n",
     "print(f\"R2 score: {rf_model_r2_score}  Mean Square Error: {rf_model_mse}  Root Mean Square Error: {rf_model_rmse}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternate model - Gradient Boosting Regression\n",
+    "gbr_model = GradientBoostingRegressor(n_estimators=1000, random_state=4)\n",
+    "\n",
+    "gbr_model.fit(scaled_x_train, y_train)\n",
+    "gbr_model_predictions = gbr_model.predict(scaled_x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.43731582754579  Mean Square Error: 1807243238507.416  Root Mean Square Error: 1344337.4719568803\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Score model\n",
+    "gbr_model_r2_score = metrics.r2_score(y_test, gbr_model_predictions)\n",
+    "gbr_model_rmse = metrics.root_mean_squared_error(y_test, gbr_model_predictions)\n",
+    "gbr_model_mse = gbr_model_rmse ** 2\n",
+    "\n",
+    "print(f\"R2 score: {gbr_model_r2_score}  Mean Square Error: {gbr_model_mse}  Root Mean Square Error: {gbr_model_rmse}\")"
    ]
   },
   {
